@@ -1,3 +1,3 @@
 #!/bin/bash
 
-find . -name "*.php" -o -name "*.inc" | xargs grep -l "cct([^\'\"].*[^\'\"])" | sort
+find . -name "*.php" -o -name "*.inc" | xargs grep -l "_?cct([^\'\"].*[^\'\"])" | sort
